# CLI-Directory-Cleaner

./: Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
src/: args.rs  logic.rs  main.rs
